--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 										<h2 class="major">破壳日吖</h2>
 										<p>2002.10.22
 											生逢俱如意，日沐南风吹。快乐常伴友，乐衔月下杯。</p>
-										<a href="#" class="special">Learn more</a>
+										<a href="generic.html" class="special">Learn more</a>
 									</div>
 								</div>
 							</section>
