--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 									<div class="content">
 										<h2 class="major">个人信息</h2>
 										<p>来自安徽省太和县的一位积极乐观，开朗随和，幽默可爱，认真负责，低调内敛（此处省略无数形容词）（划掉）的小仙女   （狗头保命）</p>
-										<a href="#" class="special">Learn more</a>
+										<a href="elements.html" class="special">Learn more</a>
 									</div>
 								</div>
 							</section>
