--- a/generic.html
+++ b/generic.html
@@ -54,7 +54,8 @@
 								<div class="inner">
 
 									<h3 class="major">生日肯定少不了生日蛋糕啦~</h3>
-									<p><img src="images/p1.jpg" alt="" /></a></p>
+									<p><img src="images/P1.jpg" alt="" /></a></p>
+						<a href="#" class="image"><img src="images/P4.jpg" alt="" /></a>
 
 									<p>Vestibulum ultrices risus velit, sit amet blandit massa auctor sit amet. Sed eu lectus sem. Phasellus in odio at ipsum porttitor mollis id vel diam. Praesent sit amet posuere risus, eu faucibus lectus. Vivamus ex ligula, tempus pulvinar ipsum in, auctor porta quam. Proin nec commodo, vel scelerisque nisi scelerisque. Suspendisse id quam vel tortor tincidunt suscipit. Nullam auctor orci eu dolor consectetur, interdum ullamcorper ante tincidunt. Mauris felis nec felis elementum varius.</p>
 
