--- a/elements.html
+++ b/elements.html
@@ -57,7 +57,7 @@
 										<h3 class="major">Text</h3>
 										<p> </p>
 										<h4>证件照</h4>
-										<证件照><a href="#" class="image"><img src="images/.jpg" alt="" /></a></证件照>
+										<证件照><a href="#" class="image"><img src="images/P5.jpg" alt="" /></a></证件照>
 										<h4>Preformatted</h4>
 										<pre><code>i = 0;
 
