--- a/elements.html
+++ b/elements.html
@@ -58,16 +58,14 @@
 										<p> </p>
 										<h4>证件照</h4>
 										<证件照><a href="#" class="image"><img src="images/P5.jpg" alt="" /></a></证件照>
-										<h4>Preformatted</h4>
-										<pre><code>i = 0;
+										<h4>基本信息</h4>
+										<pre><code>姓名：周玉洁
+										性别:女
+  籍贯：安徽省阜阳市太和县
+  专业：预防医学
+  
 
-while (!deck.isInOrder()) {
-  print 'Iteration ' + i;
-  deck.shuffle();
-  i++;
-}
-
-print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
+</code></pre>
 									</section>
 
 									<section>
