--- a/elements.html
+++ b/elements.html
@@ -73,18 +73,10 @@
 									<section>
 										<h3 class="major">Image</h3>
 										<h4>Fit</h4>
-										<div class="box alt">
-											<div class="row gtr-uniform">
-												<div class="col-12"><span class="image fit"><img src="images/pic08.jpg" alt="" /></span></div>
-												<div class="col-4"><span class="image fit"><img src="images/pic05.jpg" alt="" /></span></div>
-												<div class="col-4"><span class="image fit"><img src="images/pic06.jpg" alt="" /></span></div>
-												<div class="col-4"><span class="image fit"><img src="images/pic07.jpg" alt="" /></span></div>
-												<div class="col-4"><span class="image fit"><img src="images/pic07.jpg" alt="" /></span></div>
-												<div class="col-4"><span class="image fit"><img src="images/pic05.jpg" alt="" /></span></div>
-												<div class="col-4"><span class="image fit"><img src="images/pic06.jpg" alt="" /></span></div>
-												<div class="col-4"><span class="image fit"><img src="images/pic06.jpg" alt="" /></span></div>
-												<div class="col-4"><span class="image fit"><img src="images/pic07.jpg" alt="" /></span></div>
-												<div class="col-4"><span class="image fit"><img src="images/pic05.jpg" alt="" /></span></div>
+										<a href="#" class="image"><img src="images/1.jpg" alt="" /></a>
+										<a href="#" class="image"><img src="images/2.jpg" alt="" /></a>
+										<a href="#" class="image"><img src="images/3.jpg" alt="" /></a>
+										<a href="#" class="image"><img src="images/4.jpg" alt="" /></a>
 											</div>
 										</div>
 										<h4>Left &amp; Right</h4>
