--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
 									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Hobbies</h2>
-										<p>正在慢慢发掘中...</p>
+										<p>正在慢慢发掘中...
+学过画画但完全是个菜鸡
+喜欢听歌但五音不全</p>
 										<a href="#" class="special">Learn more</a>
 									</div>
 								</div>
