--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
 											<h3 class="major">Junior high school</h3>
 											<p>太和三中</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="https://baike.baidu.com/item/%E5%A4%AA%E5%92%8C%E5%8E%BF%E7%AC%AC%E4%B8%89%E4%B8%AD%E5%AD%A6/7480994?fr=aladdin" class="special">Learn more</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
@@ -161,8 +161,8 @@
 									 北京大学
 								</li>
 								<li class="icon solid fa-phone">(000) 000-0000</li>
-								<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-								<li class="icon brands fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
+								<li class="icon solid fa-envelope"><a href="#">微信：HelloZhouyujie</a></li>
+								<li class="icon brands fa-twitter"><a href="#">QQ:2471619398</a></li>
 								<li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled-tld</a></li>
 								<li class="icon brands fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
 							</ul>
