--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 										<h2 class="major">破壳日吖</h2>
 										<p>2002.10.22
 											生逢俱如意，日沐南风吹。快乐常伴友，乐衔月下杯。</p>
-										<a href="generic.html" class="special">Learn more</a>
+										<a href="generic.html" class="special">点击我了解更多</a>
 									</div>
 								</div>
 							</section>
@@ -72,7 +72,7 @@
 									<div class="content">
 										<h2 class="major">个人信息</h2>
 										<p>来自安徽省太和县的一位积极乐观，开朗随和，幽默可爱，认真负责，低调内敛（此处省略无数形容词）（划掉）的小仙女   （狗头保命）</p>
-										<a href="elements.html" class="special">Learn more</a>
+										<a href="elements.html" class="special">更多基本资料</a>
 									</div>
 								</div>
 							</section>
@@ -83,10 +83,10 @@
 									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Hobbies</h2>
-										<p>正在慢慢发掘中...
-学过画画但完全是个菜鸡
-喜欢听歌但五音不全</p>
-										<a href="#" class="special">Learn more</a>
+										<p>正在慢慢发掘中...</p>
+  <p>学过画画但完全是个菜鸡</p>
+<p>喜欢听歌但五音不全</p>
+						
 									</div>
 								</div>
 							</section>
