--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
 											<h3 class="major">Primary school</h3>
 											<p>太和三小</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="https://baike.sogou.com/m/fullLemma?lid=178543827&fromTitle=%E5%A4%AA%E5%92%8C%E5%8E%BF%E7%AC%AC%E4%B8%89%E5%B0%8F%E5%AD%A6&utm_source=sg.outsourcing&rcer=g9PEAOGT4pACy9gty" class="special">Learn more</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
@@ -113,13 +113,13 @@
 											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
 											<h3 class="major">Senior high school</h3>
 											<p>太和一中</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="http://www.thyz.net/" class="special">Learn more</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
 											<h3 class="major">University</h3>
 											<p>北京大学</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="https://www.pku.edu.cn/" class="special">Learn more</a>
 										</article>
 									</section>
 									<ul class="actions">
